Stops links from being cut off early unneccesarily

--- a/popup.css
+++ b/popup.css
@@ -3,8 +3,6 @@ body {
   background-color: #f0f0f0;
 }
 
-
-
 #navbar {
   top: 0;
   padding: 0.9em 0em;
@@ -16,8 +14,11 @@ body {
   z-index: 1;
 }
 
-#navbar p {
+#navbar h1 {
+  display: inline;
+  font-weight: normal;
   font-size: 1.45em;
+  transform: scaleX(2);
 }
 
 #settings-icon {
@@ -88,8 +89,6 @@ input:checked + .slider:after {
   content: 'ON';
 }
 
-
-
 #bookmarks {
   margin-top: 4em;
 }
@@ -114,7 +113,7 @@ input:checked + .slider:after {
 .folder-arrow {
   display: inline-block;
   padding: 0;
-  margin: 0% 2%;
+  margin: 0% 2% 2% 2%;
 }
 
 .rotated {
@@ -134,10 +133,10 @@ input:checked + .slider:after {
 
 a {
   display: inline-block;
+  width: 90%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 90%;
 }
 
 p {
